[WIDGET] Fixed an alignment problem of "input block label".

--- a/themes/ptn/assets/styles/src/gadgets/input-block.less
+++ b/themes/ptn/assets/styles/src/gadgets/input-block.less
@@ -1,5 +1,5 @@
 .ptn-input-block {
-  margin: 0 0 24px;
+  margin: 0 0 30px;
 
   .ptn__flex-container_horizontal(start, center);
 
@@ -12,7 +12,9 @@
 }
 
 .ptn-input-block__label {
-  margin: 0 24px 0 0;
+  margin: 0 12px 0 0;
+  width: 24px;
+  text-align: center;
 
   > .zmdi {
     font-size: 2.1rem;
